Compiler/src/main/java/Testing/Tests/SemanticTests/failing/InvalidType.ru
/? Descripción: caso de prueba que verifica que no se pueda declarar una
/? variable de un tipo inexistente
/? Salida esperada:
/? ERROR: SEMÁNTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 9 | COLUMNA 6 | EL TIPO NO EXISTE

start{
Pepe hola;}